gitops/apps/envoy-gateway-resources/httproute-harbor.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: envoy-gateway-system
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "harbor.homelab.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: harbor-core
      namespace: harbor
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /c
    backendRefs:
    - name: harbor-core
      namespace: harbor
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /service
    backendRefs:
    - name: harbor-core
      namespace: harbor
      port: 80
  - backendRefs:
    - name: harbor-portal
      namespace: harbor
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: harbor-backend
  namespace: harbor
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: envoy-gateway-system
  to:
  - group: ""
    kind: Service
    name: harbor-portal
  - group: ""
    kind: Service
    name: harbor-core
